# invoice-pipeline

./: .gitignore  LICENSE  README.md  config-glm.yaml  config.yaml  invoice-pipeline@.service  pyproject.toml  start.sh  start_explorer.sh
docs/diagrams/: architecture.mmd  entity_resolution.mmd
pipeline/: __init__.py  cli.py  config.py  graph_ingester.py  main.py  processor.py  server.py  watcher.py
scripts/: queries.py
